# LocalLLM

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.bat  start.bat  tailwind.config.js  vite.config.ts
backend/: cleanup_memory.py  main.py  memory.py  model_manager.py  profile.json  requirements.txt  settings.json  test_dll.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  system_monitor.rs
src/components/: ChatWindow.tsx  CodeBlock.tsx  EmbeddingStatus.tsx  FlushButton.tsx  LatexRenderer.tsx  MemoryLayerPanel.tsx  MemoryModal.tsx  MessageBubble.tsx  ModelPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SystemMonitor.tsx
src/lib/: api.ts
src/store/: chatStore.ts  modelStore.ts
