[package]
name = "tauri-app"
version = "0.1.0"
description = "LocalLLM Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }

serde_json = "1"
nvml-wrapper = "0.10"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
